# fsdeploy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  PLAN.md  README.md  STATE.json  add.md  check_imports_7.8.py  check_subprocess.py  cleanup_contrib.sh  cleanup_lib_ui.sh  cleanup_root.py  cron-tasks.sh  launch.sh  main.py  next_actions.md  readme.md  remove_duplicates.sh  remove_tests_fsdeploy.py  requirements.txt  structure.txt  sys  test_all.py  test_integration_7_17.py  worker.py
tests/fsdeploy/: LICENSE  README.md  __main__.py  launch.sh  pyproject.toml  requirements.txt  test_intents_build.py
tests/fsdeploy/contrib/systemd/: fsdeploy.service
tests/fsdeploy/docs/: DOCUMENTATION_SUMMARY.md  FINAL_RECAP.md  INDEX.md  SESSION_FINAL.md  fsdeploy_main_status.md  manuel.md
tests/fsdeploy/lib/: log.py  test_run.py
tests/fsdeploy/lib/bus/: event_bus.py
tests/fsdeploy/lib/function/: graph_anim.py  init_boot_config.py  init_check.py  init_install.py  moduleregistry.py  multiarch.py  partition_detect.py  zfsbootmenu_integrate.py
tests/fsdeploy/lib/function/detect/: environment.py
tests/fsdeploy/lib/function/kernel/: switch.py
tests/fsdeploy/lib/function/module/: __init__.py  base.py  list.py  local.py  registry.py  tasks.py  uninstall.py  update.py
tests/fsdeploy/lib/function/rootfs/: switch.py
tests/fsdeploy/lib/function/service/: install.py
tests/fsdeploy/lib/function/snapshot/: create.py
tests/fsdeploy/lib/function/stream/: youtube.py
tests/fsdeploy/lib/intents/: config_intent.py  init_boot_config_intent.py  integration_intent.py  kernel_intent.py  log_intent.py  system_intent.py
tests/fsdeploy/lib/modules/: __init__.py  registry.py
tests/fsdeploy/lib/modules/check/: __init__.py
tests/fsdeploy/lib/modules/scanner/: __init__.py  squashfs.py
tests/fsdeploy/lib/scheduler/intentlog/: __init__.py  codec.py
tests/fsdeploy/lib/scheduler/model/: event.py  intent.py  task.py
tests/fsdeploy/lib/scheduler/queue/: event_queue.py  intent_queue.py
tests/fsdeploy/lib/scheduler/runtime/: monitor.py
tests/fsdeploy/lib/ui/screens/: coherence.py  config_snapshot.py  debug.py  (+11 more)
tests/fsdeploy/scripts/: test_logs.py
tests/fsdeploy/tests/ui/: test_screens_integration.py
tests/fsdeploy/ui/screens/: graph.py
(+292 files in other folders)
