[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fsdeploy"
version = "0.2.0"
description = "ZFS deployment system with ZFSBootMenu from Debian Live Trixie"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
authors = [
    { name = "fsdeploy contributors" }
]
keywords = ["zfs", "zfsbootmenu", "deployment", "debian", "live", "boot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Boot",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "textual>=8.2.1,<9",
    "textual-dev>=1.8.0,<2",
    "rich>=14.3.3,<15",
    "configobj>=5.0.8",
    "structlog>=24.0.0",
    "typer>=0.12.0",
    "psutil>=5.9.0",
    "pyudev>=0.24.0",
    "packaging>=23.0",
    "humanize>=4.0.0",
    "watchfiles>=0.21.0",
    "python-ffmpeg>=2.0.0",
    "platformdirs>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/newicody/fsdeploy"
Documentation = "https://github.com/newicody/fsdeploy#readme"
Repository = "https://github.com/newicody/fsdeploy.git"
Issues = "https://github.com/newicody/fsdeploy/issues"

[project.scripts]
fsdeploy = "lib.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
